compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__function_arg_and_return_annotation.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 394
expression: "fn(x: Int) -> Float { x }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:23
  │
1 │ fn(x: Int) -> Float { x }
  │                       ^

The type of this returned value doesn't match the return type 
annotation of this function.

Expected type:

    Float

Found type:

    Int


